force-app/main/default/objects/Serialized_Unit_Summary_Archive__c/Serialized_Unit_Summary_Archive__c.object-meta.xml
<CustomObject>
    <description>Object is used to temporarily store Serialized Units during batch processing</description>
    <label>Serialized Unit Summary Archive</label>
    <nameField>
        <label>SUS Archive</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Serialized Unit Summary Archive</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>