force-app/main/default/objects/Serialized_Unit_Summary_Archive__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Serialized Unit Summary Archive</relationshipLabel>
    <relationshipName>SU_Summary_Archive</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>