force-app/main/default/objects/Serialized_Unit_Summary_Archive__c/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <label>Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GT</fullName>
            </value>
            <value>
                <fullName>MCP110</fullName>
            </value>
            <value>
                <fullName>MCP50</fullName>
            </value>
            <value>
                <fullName>OT</fullName>
            </value>
            <value>
                <fullName>OV</fullName>
            </value>
            <value>
                <fullName>OV2</fullName>
            </value>
            <value>
                <fullName>OVM</fullName>
            </value>
            <value>
                <fullName>OVT</fullName>
            </value>
            <value>
                <fullName>OX</fullName>
            </value>
            <value>
                <fullName>OX2</fullName>
            </value>
            <value>
                <fullName>T2</fullName>
            </value>
            <value>
                <fullName>TT210</fullName>
            </value>
            <value>
                <fullName>CEVS</fullName>
            </value>
            <value>
                <fullName>AMGC</fullName>
            </value>
            <value>
                <fullName>IVG-SM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>